v0.6/guides/security/cors.mdx
---
title: "CORS"
description: "Configure Cross-Origin Resource Sharing headers for your API."
icon: "globe"
---

`@bejibun/cors` manages Cross-Origin Resource Sharing. Headers are computed once
at startup and merged into every response automatically.

## Installation

```bash
bun ace install @bejibun/cors
```

This installs the package and drops `config/cors.ts`.

## Configuration

```ts config/cors.ts
const config: Record<string, any> = {
    allowedHeaders: "*",
    credentials: false,
    exposedHeaders: [],
    maxAge: 86400,
    methods: "*",
    origin: "*"
};

export default config;
```

| Option           | Description                                                              |
| ---------------- | ------------------------------------------------------------------------ |
| `origin`         | Allowed origin(s): a string, `"*"`, or string array                      |
| `methods`        | Allowed HTTP methods: a string, `"*"`, or array                          |
| `allowedHeaders` | Headers the client may send: a string, `"*"`, or array                   |
| `exposedHeaders` | Headers exposed to the client (string array only)                        |
| `credentials`    | Allow cookies and credentials (`Access-Control-Allow-Credentials: true`) |
| `maxAge`         | Preflight cache duration in seconds                                      |

Array values are joined into a comma-separated header; a literal `"*"` is sent
as-is. The builder reads `config/cors.ts` once and caches the resulting headers
for the lifetime of the process.

## How it applies

The configured headers are applied to every response built with the `Response`
facade, covering both `send()` and `stream()`:

| Config option        | Response header                            |
| -------------------- | ------------------------------------------ |
| `origin`             | `Access-Control-Allow-Origin`              |
| `methods`            | `Access-Control-Allow-Methods`             |
| `allowedHeaders`     | `Access-Control-Allow-Headers`             |
| `exposedHeaders`     | `Access-Control-Expose-Headers` (when set) |
| `credentials` (true) | `Access-Control-Allow-Credentials: true`   |
| `maxAge`             | `Access-Control-Max-Age`                   |

When returning a raw `Response`, merge the headers in manually:

<CodeGroup>
    ```ts Standalone
    import Cors from "@bejibun/cors";

    return Response.json(payload, {
        headers: {
            ...Cors.init
        }
    });
    ```

    ```ts Using Bejibun
    import CorsLoader from "@bejibun/core/loader/CorsLoader";
    import Cors from "@bejibun/cors";

    return Response.json(payload, {
        headers: {
            ...CorsLoader.cors
        }
    });
    ```

</CodeGroup>

`Cors.init` is a getter: it computes the headers once (via `CorsBuilder`) and
returns the cached result on every read. `CorsLoader.cors` holds the same
headers, populated by the framework during `bootstrap.ts`.

<Warning>
    The defaults (`origin: "*"`, `allowedHeaders: "*"`) are permissive for getting started. In
    production, replace `*` with an explicit allowlist of trusted origins and headers, and only
    enable `credentials` when you actually need cookies or authorization headers across origins.
</Warning>
